--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "config.js",
   "scripts": {
     "test": "mocha spec/*.js",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
