--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^2.1.4",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "chance": "^1.0.4",
     "cors": "^2.8.1",
